--- a/index.html
+++ b/index.html
@@ -77,32 +77,25 @@
       flex-direction: column;
       gap: 1rem;
     }
-
-    /* Hero card appears first on mobile */
     #statCardContainer .center-hero { order: 1; }
-
     #statCardContainer .left-stats {
       order: 2;
       display: grid;
       grid-template-columns: 1fr 1fr;
       gap: 1rem;
     }
-
     #statCardContainer .right-stats {
       order: 3;
       display: grid;
       grid-template-columns: 1fr 1fr;
       gap: 1rem;
     }
-
-    /* Desktop layout for the stat card section */
     @media (min-width: 1024px) {
       #statCardContainer {
         flex-direction: row;
         align-items: stretch;
         gap: 1.5rem;
       }
-
       #statCardContainer .left-stats {
         order: 1;
         flex: 1;
@@ -111,13 +104,11 @@
         grid-template-columns: 1fr;
         gap: 1rem;
       }
-
       #statCardContainer .center-hero {
         order: 2;
         flex-shrink: 0;
         width: 400px;
       }
-
       #statCardContainer .right-stats {
         order: 3;
         flex: 1;
@@ -126,7 +117,6 @@
         grid-template-columns: 1fr;
         gap: 1rem;
       }
-
       #statCardContainer .stat-card {
         display: flex;
         flex-direction: column;
@@ -321,27 +311,14 @@
     </div>
   </div> <!-- /.app-shell -->
 
-  <!-- LOGIN MODAL (respects safe-area via CSS bottom padding) -->
+  <!-- LOGIN MODAL (email-only) -->
   <div id="loginModal" class="hidden fixed inset-0 bg-black bg-opacity-50 modal z-50 flex items-center justify-center p-4">
     <div class="bg-white rounded-lg p-6 w-full max-w-md relative">
       <h2 class="text-xl font-bold mb-4">Sign In to CEORater</h2>
       <p class="text-gray-600 mb-6">Sign in to save your CEO watchlist and track performance over time.</p>
+
       <div class="space-y-4">
-        <button id="googleSignIn" class="w-full flex items-center justify-center gap-3 px-4 py-3 border border-gray-300 rounded-lg hover:bg-gray-50 transition">
-          <svg class="w-5 h-5" viewBox="0 0 24 24"><path fill="#4285F4" d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z"/><path fill="#34A853" d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z"/><path fill="#FBBC05" d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z"/><path fill="#EA4335" d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z"/></svg>
-          Continue with Google
-        </button>
-
-        <button id="microsoftSignIn" class="w-full flex items-center justify-center gap-3 px-4 py-3 border border-gray-300 rounded-lg hover:bg-gray-50 transition">
-          <svg class="w-5 h-5" viewBox="0 0 21 21"><path fill="#f25022" d="M1 1h9v9H1z"/><path fill="#00a4ef" d="M1 11h9v9H1z"/><path fill="#7fba00" d="M11 1h9v9h-9z"/><path fill="#ffb900" d="M11 11h9v9h-9z"/></svg>
-          Continue with Microsoft
-        </button>
-
-        <div class="relative">
-          <div class="absolute inset-0 flex items-center"><div class="w-full border-t border-gray-300"></div></div>
-          <div class="relative flex justify-center text-sm"><span id="orDivider" class="px-2 bg-white text-gray-500">or</span></div>
-        </div>
-
+        <!-- Email/password only -->
         <input id="emailInput" type="email" placeholder="Enter your email" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500" />
         <input id="passwordInput" type="password" placeholder="Password" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500" />
 
@@ -377,7 +354,7 @@
     </div>
   </div>
 
-  <!-- COMPARISON TRAY (fixed bottom; CSS adds safe bottom padding) -->
+  <!-- COMPARISON TRAY -->
   <div id="comparisonTray" class="hidden fixed bottom-0 left-0 right-0 bg-white shadow-2xl border-t border-gray-200 z-40">
     <div class="container mx-auto p-3 text-center sm:p-4 sm:text-left sm:flex sm:justify-between sm:items-center">
       <div class="flex items-center justify-center sm:justify-start space-x-3">
@@ -436,4 +413,3 @@
   </script>
 </body>
 </html>
-
