--- a/index.html
+++ b/index.html
@@ -318,19 +318,39 @@
       <p class="text-gray-600 mb-6">Sign in to save your CEO watchlist and track performance over time.</p>
 
       <div class="space-y-4">
-        <!-- Email/password only -->
-        <input id="emailInput" type="email" placeholder="Enter your email" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500" />
-        <input id="passwordInput" type="password" placeholder="Password" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500" />
+<form id="signInForm" autocomplete="on" class="space-y-4">
+  <!-- Email/password only -->
+  <input
+    id="emailInput"
+    type="email"
+    name="username"
+    inputmode="email"
+    autocapitalize="none"
+    autocomplete="username"
+    placeholder="Enter your email"
+    required
+    class="w-full px-4 py-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"
+  />
+  <input
+    id="passwordInput"
+    type="password"
+    name="current-password"
+    autocomplete="current-password"
+    placeholder="Password"
+    required
+    class="w-full px-4 py-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"
+  />
 
-        <div class="text-right text-sm">
-          <a href="#" id="forgotPasswordLink" class="font-medium text-blue-600 hover:text-blue-500">Forgot Password?</a>
-        </div>
+  <div class="text-right text-sm">
+    <a href="#" id="forgotPasswordLink" class="font-medium text-blue-600 hover:text-blue-500">Forgot Password?</a>
+  </div>
 
-        <div class="flex gap-2">
-          <button id="signInEmail" class="flex-1 px-4 py-3 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition">Sign In</button>
-          <button id="signUpEmail" class="flex-1 px-4 py-3 border border-gray-300 rounded-lg hover:bg-gray-50 transition">Sign Up</button>
-        </div>
-      </div>
+  <div class="flex gap-2">
+    <button id="signInEmail" type="submit" class="flex-1 px-4 py-3 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition">Sign In</button>
+    <button id="signUpEmail" type="button" class="flex-1 px-4 py-3 border border-gray-300 rounded-lg hover:bg-gray-50 transition">Sign Up</button>
+  </div>
+</form>
+</div>
 
       <button id="closeLoginModalBtn" class="absolute top-4 right-4 text-gray-400 hover:text-gray-600">
         <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
