--- a/profile.html
+++ b/profile.html
@@ -113,7 +113,7 @@
     </div>
   </div>
 
-  <!-- Account Deletion Confirmation Modal (email-only) -->
+  <!-- Account Deletion Confirmation Modal -->
   <div id="deleteConfirmModal" class="hidden fixed inset-0 bg-black bg-opacity-50 z-50 flex items-center justify-center p-4">
     <div class="bg-white rounded-lg max-w-md w-full p-6">
       <div class="flex items-center space-x-3 mb-4">
@@ -130,7 +130,7 @@
 
       <div class="mb-6">
         <p class="text-gray-700 mb-3">
-          To confirm deletion, please type your email address and password below:
+          To confirm deletion, please type your email address below:
         </p>
 
         <label class="text-sm text-gray-600 block mb-1">Email</label>
@@ -141,14 +141,6 @@
           class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-red-500 mb-2"
         >
         <p id="expectedEmailText" class="text-xs text-gray-500 mb-4">Expected: Loading...</p>
-
-        <label class="text-sm text-gray-600 block mb-1">Password</label>
-        <input
-          id="deletePasswordInput"
-          type="password"
-          placeholder="Enter your password"
-          class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-red-500"
-        >
       </div>
 
       <div class="flex space-x-3">
@@ -167,98 +159,9 @@
   <script defer src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.22.0/firebase-auth-compat.min.js"></script>
   <script defer src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.22.0/firebase-firestore-compat.min.js"></script>
   <script defer src="/CEORater/firebase-config.js"></script>
-  <script defer src="/CEORater/script.js"></script>
-
-  <script>
-    // Keep this lightweight: we rely on main script.js for most logic
-    document.addEventListener('DOMContentLoaded', () => {
-      const waitForFirebase = (cb, tries = 50) => {
-        if (typeof firebase !== 'undefined' && firebase.auth) return cb();
-        if (tries <= 0) return;
-        setTimeout(() => waitForFirebase(cb, tries - 1), 100);
-      };
-
-      waitForFirebase(() => {
-        firebase.auth().onAuthStateChanged(async (user) => {
-          if (!user) {
-            window.location.href = '/CEORater/';
-            return;
-          }
-
-          // Email & avatar initials
-          let email = user.email || (user.providerData?.[0]?.email) || '';
-          const profileEmail = document.getElementById('profileEmail');
-          const profileProvider = document.getElementById('profileProvider');
-          const profileAvatar = document.getElementById('profileAvatar');
-
-          if (profileEmail) profileEmail.textContent = email || user.displayName || 'User';
-          if (profileProvider) profileProvider.textContent = 'Email/Password account';
-
-          if (profileAvatar) {
-  let email = user.email || '';
-  let initials = '--';
-  try {
-    if (typeof computeInitials === 'function') {
-      initials = computeInitials(user) || initials;
-    } else if (user.displayName) {
-      const ch = (user.displayName.trim()[0] || '').toUpperCase();
-      if (ch) initials = ch;
-    } else if (email) {
-      const local = email.split('@')[0] || '';
-      const ch = (local.replace(/[^A-Za-z]/g, '')[0] || local[0] || '').toUpperCase();
-      if (ch) initials = ch;
-    }
-  } catch (e) {}
-  profileAvatar.textContent = initials;
-}
-
-          // Delete modal wiring (email-only)
-          const deleteBtn = document.getElementById('deleteAccountBtn');
-          const modal = document.getElementById('deleteConfirmModal');
-          const cancelBtn = document.getElementById('cancelDelete');
-          const confirmBtn = document.getElementById('confirmDelete');
-          const emailInput = document.getElementById('emailConfirmation');
-          const expectedTxt = document.getElementById('expectedEmailText');
-          const pwdInput = document.getElementById('deletePasswordInput');
-
-          deleteBtn?.addEventListener('click', () => {
-            modal.classList.remove('hidden');
-            if (email) expectedTxt.textContent = `Expected: ${email}`;
-            confirmBtn.disabled = true;
-            if (emailInput) emailInput.value = '';
-            if (pwdInput) pwdInput.value = '';
-          });
-
-          cancelBtn?.addEventListener('click', () => {
-            modal.classList.add('hidden');
-            if (emailInput) emailInput.value = '';
-            if (pwdInput) pwdInput.value = '';
-            confirmBtn.disabled = true;
-          });
-
-          const validate = () => {
-            const ok = (emailInput?.value === email) && (pwdInput?.value?.length > 0);
-            confirmBtn.disabled = !ok;
-          };
-
-          emailInput?.addEventListener('input', validate);
-          pwdInput?.addEventListener('input', validate);
-
-          confirmBtn?.addEventListener('click', async () => {
-            try {
-              if (window.handleAccountDeletion) {
-                await window.handleAccountDeletion();
-              } else {
-                alert('Unable to delete from this page. Please try again.');
-              }
-            } catch (e) {
-              console.error('Deletion failed:', e);
-              alert('Account deletion failed: ' + (e?.message || 'Unknown error'));
-            }
-          });
-        });
-      });
-    });
-  </script>
+  <!-- IMPORTANT: Load auth.js before script.js for proper function availability -->
+  <script defer src="/CEORater/auth.js" type="module"></script>
+  <script defer src="/CEORater/script.js" type="module"></script>
+  <!-- Remove all inline scripts - let script.js handle everything -->
 </body>
 </html>
