--- a/profile.html
+++ b/profile.html
@@ -14,7 +14,6 @@
   </style>
 </head>
 <body class="bg-gray-50 font-inter">
-  <!-- Header -->
   <header class="bg-white shadow-sm border-b border-gray-200">
     <div class="container mx-auto px-4 py-4">
       <div class="flex items-center justify-between">
@@ -23,30 +22,29 @@
             <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path>
             </svg>
-            Back to CEORater
+            <span class="text-sm">Back to CEORater</span>
           </a>
         </div>
-        <h1 class="text-2xl font-orbitron italic font-bold text-blue-600">CEORater</h1>
+        <h1 class="text-xl md:text-2xl font-orbitron italic font-bold text-blue-600">CEORater</h1>
         <div></div>
       </div>
     </div>
   </header>
 
-  <div class="container mx-auto px-4 py-8 max-w-4xl">
+  <div class="container mx-auto px-4 py-8 md:py-12 max-w-4xl">
     <div class="mb-8">
-      <h1 class="text-3xl font-bold text-gray-900 mb-2">Account Settings</h1>
+      <h1 class="text-3xl md:text-4xl font-bold text-gray-900 mb-2">Account Settings</h1>
       <p class="text-gray-600">Manage your CEORater account preferences and data.</p>
     </div>
 
-    <!-- Profile Section -->
     <div class="bg-white rounded-lg shadow-sm border border-gray-200 overflow-hidden mb-8">
       <div class="px-6 py-4 border-b border-gray-200">
-        <h2 class="text-lg font-semibold text-gray-900">Profile Information</h2>
+        <h2 class="text-lg md:text-xl font-semibold text-gray-900">Profile Information</h2>
         <p class="text-sm text-gray-600">Your account details.</p>
       </div>
       <div class="p-6">
         <div class="flex items-center space-x-6 mb-6">
-          <div id="profileAvatar" data-user-avatar class="w-20 h-20 bg-blue-100 text-blue-600 rounded-full flex items-center justify-center font-semibold text-xl">
+          <div id="profileAvatar" data-user-avatar class="w-16 h-16 bg-blue-100 text-blue-600 rounded-full flex items-center justify-center font-semibold text-xl md:text-2xl">
             --
           </div>
           <div>
@@ -58,10 +56,9 @@
       </div>
     </div>
 
-    <!-- Privacy Section -->
     <div class="bg-white rounded-lg shadow-sm border border-gray-200 overflow-hidden mb-8">
       <div class="px-6 py-4 border-b border-gray-200">
-        <h2 class="text-lg font-semibold text-gray-900">Privacy & Terms</h2>
+        <h2 class="text-lg md:text-xl font-semibold text-gray-900">Privacy & Terms</h2>
         <p class="text-sm text-gray-600">Review our policies and control your privacy settings.</p>
       </div>
       <div class="p-6">
@@ -83,10 +80,9 @@
       </div>
     </div>
 
-    <!-- Danger Zone -->
     <div class="bg-white rounded-lg shadow-sm border border-red-200 overflow-hidden">
       <div class="px-6 py-4 border-b border-red-200 bg-red-50">
-        <h2 class="text-lg font-semibold text-red-900">Danger Zone</h2>
+        <h2 class="text-lg md:text-xl font-semibold text-red-900">Danger Zone</h2>
         <p class="text-sm text-red-700">Irreversible and destructive actions.</p>
       </div>
       <div class="p-6">
@@ -113,7 +109,6 @@
     </div>
   </div>
 
-  <!-- Account Deletion Confirmation Modal -->
   <div id="deleteConfirmModal" class="hidden fixed inset-0 bg-black bg-opacity-50 z-50 flex items-center justify-center p-4">
     <div class="bg-white rounded-lg max-w-md w-full p-6">
       <div class="flex items-center space-x-3 mb-4">
@@ -154,16 +149,13 @@
     </div>
   </div>
 
-  <!-- Firebase and App Scripts -->
   <script defer src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.22.0/firebase-app-compat.min.js"></script>
   <script defer src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.22.0/firebase-auth-compat.min.js"></script>
   <script defer src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.22.0/firebase-firestore-compat.min.js"></script>
   <script defer src="/CEORater/firebase-config.js"></script>
-  <!-- IMPORTANT: Load auth.js before script.js for proper function availability -->
   <script defer src="/CEORater/auth.js" type="module"></script>
   <script defer src="/CEORater/script.js" type="module"></script>
   
-  <!-- Simple profile page initialization -->
   <script>
     document.addEventListener('DOMContentLoaded', function() {
       // Wait for Firebase
