--- a/profile.html
+++ b/profile.html
@@ -43,7 +43,7 @@
     </div>
   </header>
 
-  <div class="container mx-auto px-4 py-8 md:py-12 max-w-4xl">
+  <div class="container mx-auto px-4 py-8 md:py-12 md:max-w-4xl">
     <div class="mb-8">
       <h1 class="text-3xl md:text-4xl font-bold text-gray-900 mb-2">Account Settings</h1>
       <p class="text-gray-600">Manage your CEORater account preferences and data.</p>
