--- a/profile.html
+++ b/profile.html
@@ -27,7 +27,7 @@
 </head>
 <body class="bg-gray-50 font-inter">
   <header class="bg-white shadow-sm border-b border-gray-200">
-    <div class="container mx-auto px-4 py-4">
+    <div class="px-4 py-4 md:px-8">
       <div class="flex items-center justify-between">
         <div class="flex items-center gap-4">
           <a href="/CEORater/" id="backToHome" class="flex items-center gap-2 text-blue-600 hover:text-blue-700">
@@ -43,7 +43,7 @@
     </div>
   </header>
 
-  <div class="container mx-auto px-4 py-8 md:py-12 md:max-w-4xl">
+  <div class="mx-auto px-4 py-8 md:py-12 md:max-w-4xl">
     <div class="mb-8">
       <h1 class="text-3xl md:text-4xl font-bold text-gray-900 mb-2">Account Settings</h1>
       <p class="text-gray-600">Manage your CEORater account preferences and data.</p>
@@ -99,8 +99,8 @@
       </div>
       <div class="p-6">
         <div class="border border-red-300 rounded-lg p-4 bg-red-50">
-          <div class="flex items-start justify-between">
-            <div class="flex-1">
+          <div class="flex items-start justify-between flex-wrap md:flex-nowrap">
+            <div class="flex-1 min-w-0 pr-4 mb-4 md:mb-0">
               <h3 class="font-medium text-red-900 mb-1">Delete Account</h3>
               <p class="text-sm text-red-700 mb-3">
                 Permanently delete your account and all associated data. This action cannot be undone.
@@ -112,7 +112,7 @@
                 <li>Process takes effect immediately</li>
               </ul>
             </div>
-            <button id="deleteAccountBtn" class="ml-4 px-4 py-2 bg-red-600 text-white rounded-md hover:bg-red-700 transition flex-shrink-0">
+            <button id="deleteAccountBtn" class="w-full md:w-auto px-4 py-2 bg-red-600 text-white rounded-md hover:bg-red-700 transition flex-shrink-0">
               Delete Account
             </button>
           </div>
@@ -122,7 +122,7 @@
   </div>
 
   <div id="deleteConfirmModal" class="hidden fixed inset-0 bg-black bg-opacity-50 z-50 flex items-center justify-center p-4">
-    <div class="bg-white rounded-lg max-w-md w-full p-6">
+    <div class="bg-white rounded-lg w-full max-w-md p-6">
       <div class="flex items-center space-x-3 mb-4">
         <div class="w-12 h-12 bg-red-100 text-red-600 rounded-full flex items-center justify-center">
           <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -150,11 +150,11 @@
         <p id="expectedEmailText" class="text-xs text-gray-500 mb-4">Expected: Loading...</p>
       </div>
 
-      <div class="flex space-x-3">
-        <button id="cancelDelete" class="flex-1 px-4 py-2 border border-gray-300 rounded-md hover:bg-gray-50 transition">
+      <div class="flex flex-col md:flex-row space-y-3 md:space-y-0 md:space-x-3">
+        <button id="cancelDelete" class="w-full px-4 py-2 border border-gray-300 rounded-md hover:bg-gray-50 transition">
           Cancel
         </button>
-        <button id="confirmDelete" class="flex-1 px-4 py-2 bg-red-600 text-white rounded-md hover:bg-red-700 transition disabled:opacity-50 disabled:cursor-not-allowed" disabled>
+        <button id="confirmDelete" class="w-full px-4 py-2 bg-red-600 text-white rounded-md hover:bg-red-700 transition disabled:opacity-50 disabled:cursor-not-allowed" disabled>
           Delete My Account
         </button>
       </div>
