--- a/privacy.html
+++ b/privacy.html
@@ -77,7 +77,7 @@
                 <p>We take reasonable measures to help protect your personal information from loss, theft, misuse, and unauthorized access. However, no electronic transmission or storage is 100% secure, and we cannot guarantee its absolute security.</p>
 
                 <h3 class="text-2xl font-bold text-gray-800 pt-4 border-t mt-6">5. Your Data Rights</h3>
-                <p>You have the right to access, update, or request deletion of your personal information. You can manage your account information and delete your account and all associated data directly within the app's account settings.</p>
+                <p>You have the right to access, update, or request deletion of your personal information. You can manage your account information and delete your account and all associated data directly within the app's settings.</p>
 
                 <h3 class="text-2xl font-bold text-gray-800 pt-4 border-t mt-6">6. Children's Privacy</h3>
                 <p>Our Service is not intended for use by children under the age of 13. We do not knowingly collect personally identifiable information from children under 13. If we become aware that we have collected personal information from a child under 13, we will take steps to delete that information.</p>
