--- a/privacy.html
+++ b/privacy.html
@@ -27,7 +27,6 @@
     </style>
 </head>
 <body class="bg-gray-100 text-gray-800">
-    <!-- Header -->
     <header class="bg-white shadow-md">
         <div class="container mx-auto max-w-4xl px-4">
             <div class="flex justify-between items-center py-4">
@@ -37,13 +36,12 @@
         </div>
     </header>
 
-    <!-- Main Content -->
     <main class="container mx-auto max-w-4xl px-4 py-8 md:py-12">
         <div class="bg-white rounded-lg shadow-md p-6 md:p-10">
             <h1 class="text-3xl md:text-4xl font-bold text-gray-900 mb-4">
                 <span class="font-orbitron italic text-blue-600">CEORater</span> Privacy Policy
             </h1>
-            <p class="text-sm text-gray-500 mb-8"><strong>Last Updated:</strong> July 16, 2025</p>
+            <p class="text-sm text-gray-500 mb-8"><strong>Last Updated:</strong> September 5, 2025</p>
 
             <div class="space-y-6 text-gray-700 leading-relaxed">
                 <p>This Privacy Policy describes how CEORater ("we," "us," or "our") collects, uses, and discloses your information when you use our application (the "Service").</p>
@@ -79,7 +77,7 @@
                 <p>We take reasonable measures to help protect your personal information from loss, theft, misuse, and unauthorized access. However, no electronic transmission or storage is 100% secure, and we cannot guarantee its absolute security.</p>
 
                 <h3 class="text-2xl font-bold text-gray-800 pt-4 border-t mt-6">5. Your Data Rights</h3>
-                <p>You have the right to access, update, or request deletion of your personal information. You can manage your account information directly within the app. If you wish to delete your account and all associated data, please contact us at the email address below.</p>
+                <p>You have the right to access, update, or request deletion of your personal information. You can manage your account information and delete your account and all associated data directly within the app's settings.</p>
 
                 <h3 class="text-2xl font-bold text-gray-800 pt-4 border-t mt-6">6. Children's Privacy</h3>
                 <p>Our Service is not intended for use by children under the age of 13. We do not knowingly collect personally identifiable information from children under 13. If we become aware that we have collected personal information from a child under 13, we will take steps to delete that information.</p>
@@ -88,13 +86,12 @@
                 <p>We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page and updating the "Last Updated" date.</p>
 
                 <h3 id="contact-us" class="text-2xl font-bold text-gray-800 pt-4 border-t mt-6">8. Contact Us</h3>
-                <p>If you have any questions about this Privacy Policy, or if you would like to request the deletion of your account and data, please contact us at:</p>
+                <p>If you have any questions about this Privacy Policy, please contact us at:</p>
                 <p><a href="mailto:support@ceorater.com" class="text-blue-600 hover:underline"><strong>support@ceorater.com</strong></a></p>
             </div>
         </div>
     </main>
 
-    <!-- Footer -->
     <footer class="text-center mt-8 py-8 border-t text-sm text-gray-500">
         <p class="mb-2">
             <a href="/" class="text-blue-600 hover:underline">Home</a> | 
