--- a/profile.html
+++ b/profile.html
@@ -9,158 +9,141 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Orbitron:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <style>
-    /*
-      The following inline styles were kept for avatar and font rules,
-      but the incorrect padding-top rule has been removed.
-    */
-    .font-orbitron { font-family: 'Orbitron', monospace; }
-    .font-inter { font-family: 'Inter', sans-serif; }
-    #profileAvatar {
-      width: 4rem;
-      height: 4rem;
-      border-radius: 9999px;
-    }
-    @media (min-width: 768px) {
-      #profileAvatar {
-        width: 5rem;
-        height: 5rem;
-      }
-    }
-  </style>
 </head>
 <body class="bg-gray-50 font-inter">
-  <header id="appHeader" class="bg-white shadow-sm border-b border-gray-200">
-    <div class="px-4 py-4 md:px-8">
-      <div class="flex items-center justify-between">
-        <div class="flex items-center gap-4">
-          <a href="/CEORater/" id="backToHome" class="flex items-center gap-2 text-blue-600 hover:text-blue-700">
-            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path>
-            </svg>
-            <span class="text-sm">Back to CEORater</span>
-          </a>
+  <div class="app-shell">
+    <header class="bg-white shadow-sm border-b border-gray-200">
+      <div class="px-4 py-4 md:px-8">
+        <div class="flex items-center justify-between">
+          <div class="flex items-center gap-4">
+            <a href="../" id="backToHome" class="flex items-center gap-2 text-blue-600 hover:text-blue-700">
+              <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path>
+              </svg>
+              <span class="text-sm">Back to CEORater</span>
+            </a>
+          </div>
+          <h1 class="text-xl md:text-2xl font-orbitron italic font-bold text-blue-600">CEORater</h1>
+          <div></div>
         </div>
-        <h1 class="text-xl md:text-2xl font-orbitron italic font-bold text-blue-600">CEORater</h1>
-        <div></div>
+      </div>
+    </header>
+
+    <div class="mx-auto px-4 py-8 md:py-12 md:max-w-4xl">
+      <div class="mb-8">
+        <h1 class="text-3xl md:text-4xl font-bold text-gray-900 mb-2">Account Settings</h1>
+        <p class="text-gray-600">Manage your CEORater account preferences and data.</p>
+      </div>
+
+      <div class="bg-white rounded-lg shadow-sm border border-gray-200 overflow-hidden mb-8">
+        <div class="px-6 py-4 border-b border-gray-200">
+          <h2 class="text-lg md:text-xl font-semibold text-gray-900">Profile Information</h2>
+          <p class="text-sm text-gray-600">Your account details.</p>
+        </div>
+        <div class="p-6">
+          <div class="flex items-center space-x-6 mb-6">
+            <div id="profileAvatar" data-user-avatar class="bg-blue-100 text-blue-600 rounded-full flex items-center justify-center font-semibold text-xl md:text-2xl">
+              --
+            </div>
+            <div>
+              <h3 id="profileEmail" class="text-lg font-medium text-gray-900">Loading...</h3>
+              <p id="profileProvider" class="text-sm text-gray-600">Email/Password account</p>
+              <p class="text-sm text-green-600 mt-1">✓ Verified account</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="bg-white rounded-lg shadow-sm border border-gray-200 overflow-hidden mb-8">
+        <div class="px-6 py-4 border-b border-gray-200">
+          <h2 class="text-lg md:text-xl font-semibold text-gray-900">Privacy & Terms</h2>
+          <p class="text-sm text-gray-600">Review our policies and control your privacy settings.</p>
+        </div>
+        <div class="p-6">
+          <div class="bg-blue-50 border border-blue-200 rounded-lg p-4">
+            <div class="flex items-start space-x-3">
+              <svg class="w-5 h-5 text-blue-600 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+              </svg>
+              <div>
+                <h4 class="font-medium text-blue-900">Our Policies</h4>
+                <p class="text-sm text-blue-700 mt-1">
+                  Review our 
+                  <a href="https://www.ceorater.com/privacy.html" target="_blank" class="underline hover:no-underline">Privacy Policy</a>
+                  to understand how we collect, use, and protect your data.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="bg-white rounded-lg shadow-sm border border-red-200 overflow-hidden">
+        <div class="px-6 py-4 border-b border-red-200 bg-red-50">
+          <h2 class="text-lg md:text-xl font-semibold text-red-900">Danger Zone</h2>
+          <p class="text-sm text-red-700">Irreversible and destructive actions.</p>
+        </div>
+        <div class="p-6">
+          <div class="border border-red-300 rounded-lg p-4 bg-red-50">
+            <div class="flex items-start justify-between flex-wrap md:flex-nowrap">
+              <div class="flex-1 min-w-0 pr-4 mb-4 md:mb-0">
+                <h3 class="font-medium text-red-900 mb-1">Delete Account</h3>
+                <p class="text-sm text-red-700 mb-3">
+                  Permanently delete your account and all associated data. This action cannot be undone.
+                </p>
+                <ul class="text-sm text-red-700 list-disc list-inside space-y-1 mb-4">
+                  <li>All watchlist data will be permanently deleted</li>
+                  <li>Your account credentials will be removed</li>
+                  <li>No way to recover deleted data</li>
+                  <li>Process takes effect immediately</li>
+                </ul>
+              </div>
+              <button id="deleteAccountBtn" class="w-full md:w-auto px-4 py-2 bg-red-600 text-white rounded-md hover:bg-red-700 transition flex-shrink-0">
+                Delete Account
+              </button>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-  </header>
 
-  <div class="mx-auto px-4 py-8 md:py-12 md:max-w-4xl">
-    <div class="mb-8">
-      <h1 class="text-3xl md:text-4xl font-bold text-gray-900 mb-2">Account Settings</h1>
-      <p class="text-gray-600">Manage your CEORater account preferences and data.</p>
-    </div>
-
-    <div class="bg-white rounded-lg shadow-sm border border-gray-200 overflow-hidden mb-8">
-      <div class="px-6 py-4 border-b border-gray-200">
-        <h2 class="text-lg md:text-xl font-semibold text-gray-900">Profile Information</h2>
-        <p class="text-sm text-gray-600">Your account details.</p>
-      </div>
-      <div class="p-6">
-        <div class="flex items-center space-x-6 mb-6">
-          <div id="profileAvatar" data-user-avatar class="bg-blue-100 text-blue-600 rounded-full flex items-center justify-center font-semibold text-xl md:text-2xl">
-            --
+    <div id="deleteConfirmModal" class="hidden fixed inset-0 bg-black bg-opacity-50 z-50 flex items-center justify-center p-4">
+      <div class="bg-white rounded-lg w-full max-w-md p-6">
+        <div class="flex items-center space-x-3 mb-4">
+          <div class="w-12 h-12 bg-red-100 text-red-600 rounded-full flex items-center justify-center">
+            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-2.5L13.732 4c-.77-.833-1.964-.833-2.732 0L4.732 15.5c-.77.833.192 2.5 1.732 2.5z"></path>
+            </svg>
           </div>
           <div>
-            <h3 id="profileEmail" class="text-lg font-medium text-gray-900">Loading...</h3>
-            <p id="profileProvider" class="text-sm text-gray-600">Email/Password account</p>
-            <p class="text-sm text-green-600 mt-1">✓ Verified account</p>
+            <h3 class="text-lg font-semibold text-red-900">Delete Account</h3>
+            <p class="text-sm text-red-700">This action cannot be undone</p>
           </div>
         </div>
-      </div>
-    </div>
 
-    <div class="bg-white rounded-lg shadow-sm border border-gray-200 overflow-hidden mb-8">
-      <div class="px-6 py-4 border-b border-gray-200">
-        <h2 class="text-lg md:text-xl font-semibold text-gray-900">Privacy & Terms</h2>
-        <p class="text-sm text-gray-600">Review our policies and control your privacy settings.</p>
-      </div>
-      <div class="p-6">
-        <div class="bg-blue-50 border border-blue-200 rounded-lg p-4">
-          <div class="flex items-start space-x-3">
-            <svg class="w-5 h-5 text-blue-600 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
-            </svg>
-            <div>
-              <h4 class="font-medium text-blue-900">Our Policies</h4>
-              <p class="text-sm text-blue-700 mt-1">
-                Review our 
-                <a href="https://www.ceorater.com/privacy.html" target="_blank" class="underline hover:no-underline">Privacy Policy</a>
-                to understand how we collect, use, and protect your data.
-              </p>
-            </div>
-          </div>
+        <div class="mb-6">
+          <p class="text-gray-700 mb-3">
+            To confirm deletion, please type your email address below:
+          </p>
+
+          <label class="text-sm text-gray-600 block mb-1">Email</label>
+          <input 
+            id="emailConfirmation" 
+            type="email" 
+            placeholder="Enter your email"
+            class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-red-500 mb-2"
+          >
+          <p id="expectedEmailText" class="text-xs text-gray-500 mb-4">Expected: Loading...</p>
         </div>
-      </div>
-    </div>
 
-    <div class="bg-white rounded-lg shadow-sm border border-red-200 overflow-hidden">
-      <div class="px-6 py-4 border-b border-red-200 bg-red-50">
-        <h2 class="text-lg md:text-xl font-semibold text-red-900">Danger Zone</h2>
-        <p class="text-sm text-red-700">Irreversible and destructive actions.</p>
-      </div>
-      <div class="p-6">
-        <div class="border border-red-300 rounded-lg p-4 bg-red-50">
-          <div class="flex items-start justify-between flex-wrap md:flex-nowrap">
-            <div class="flex-1 min-w-0 pr-4 mb-4 md:mb-0">
-              <h3 class="font-medium text-red-900 mb-1">Delete Account</h3>
-              <p class="text-sm text-red-700 mb-3">
-                Permanently delete your account and all associated data. This action cannot be undone.
-              </p>
-              <ul class="text-sm text-red-700 list-disc list-inside space-y-1 mb-4">
-                <li>All watchlist data will be permanently deleted</li>
-                <li>Your account credentials will be removed</li>
-                <li>No way to recover deleted data</li>
-                <li>Process takes effect immediately</li>
-              </ul>
-            </div>
-            <button id="deleteAccountBtn" class="w-full md:w-auto px-4 py-2 bg-red-600 text-white rounded-md hover:bg-red-700 transition flex-shrink-0">
-              Delete Account
-            </button>
-          </div>
+        <div class="flex flex-col md:flex-row space-y-3 md:space-y-0 md:space-x-3">
+          <button id="cancelDelete" class="w-full px-4 py-2 border border-gray-300 rounded-md hover:bg-gray-50 transition">
+            Cancel
+          </button>
+          <button id="confirmDelete" class="w-full px-4 py-2 bg-red-600 text-white rounded-md hover:bg-red-700 transition disabled:opacity-50 disabled:cursor-not-allowed" disabled>
+            Delete My Account
+          </button>
         </div>
-      </div>
-    </div>
-  </div>
-
-  <div id="deleteConfirmModal" class="hidden fixed inset-0 bg-black bg-opacity-50 z-50 flex items-center justify-center p-4">
-    <div class="bg-white rounded-lg w-full max-w-md p-6">
-      <div class="flex items-center space-x-3 mb-4">
-        <div class="w-12 h-12 bg-red-100 text-red-600 rounded-full flex items-center justify-center">
-          <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-2.5L13.732 4c-.77-.833-1.964-.833-2.732 0L4.732 15.5c-.77.833.192 2.5 1.732 2.5z"></path>
-          </svg>
-        </div>
-        <div>
-          <h3 class="text-lg font-semibold text-red-900">Delete Account</h3>
-          <p class="text-sm text-red-700">This action cannot be undone</p>
-        </div>
-      </div>
-
-      <div class="mb-6">
-        <p class="text-gray-700 mb-3">
-          To confirm deletion, please type your email address below:
-        </p>
-
-        <label class="text-sm text-gray-600 block mb-1">Email</label>
-        <input 
-          id="emailConfirmation" 
-          type="email" 
-          placeholder="Enter your email"
-          class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-red-500 mb-2"
-        >
-        <p id="expectedEmailText" class="text-xs text-gray-500 mb-4">Expected: Loading...</p>
-      </div>
-
-      <div class="flex flex-col md:flex-row space-y-3 md:space-y-0 md:space-x-3">
-        <button id="cancelDelete" class="w-full px-4 py-2 border border-gray-300 rounded-md hover:bg-gray-50 transition">
-          Cancel
-        </button>
-        <button id="confirmDelete" class="w-full px-4 py-2 bg-red-600 text-white rounded-md hover:bg-red-700 transition disabled:opacity-50 disabled:cursor-not-allowed" disabled>
-          Delete My Account
-        </button>
       </div>
     </div>
   </div>
